@@ -9,10 +9,9 @@ class CreateDocumentFromTemplateCommand(CreateDocumentCommand):
     skip_defaults_fields = ['title', 'file']
 
     def __init__(self, context, template_doc, title):
-        self.context = context
-        self.data = template_doc.file.data
-        self.filename = template_doc.file.filename
-        self.title = title
+        super(CreateDocumentFromTemplateCommand, self).__init__(
+            context, template_doc.file.filename, template_doc.file.data,
+            title=title)
 
     def notify_modified(self, content):
         """Also make sure doc-properties are updated from template."""
