@@ -37,7 +37,9 @@ Changelog
 4.2.1 (2015-03-17)
 ------------------
 
-- Refactor quickupload-adapter and creating-documents from template to use commands.
+- Refactor: add command to create documents. Use this command for
+  quickupload-adapter, when creating-documents from template and when extracting
+  documents from emails.
   [deiferni]
 
 - SchemaMigration: Use IdempotentOperations only when executing migrations for MySQL.
